# coros-fcgi

./: .gitmodules  CMakeLists.txt  README.md
examples/: hello.cpp
src/coros_fcgi/: app.cpp  app.h  handler.cpp  handler.h
src/coros_fcgi/application/: channel.cpp  channel.h  endpoint.h  request.cpp  request.h  response.cpp  response.h
src/coros_fcgi/channel/: channel.cpp  channel.h  pipe.cpp  pipe.h  response.cpp  response.h
src/coros_fcgi/commons/: integer.cpp  integer.h
src/coros_fcgi/pipe/: awaiter.cpp  awaiter.h  pipe.cpp  pipe.h  receive_awaiter.cpp  receive_awaiter.h  send_awaiter.cpp  send_awaiter.h
src/coros_fcgi/record/: header.cpp  header.h  processor.cpp  processor.h
